# x-IMU3-Device

./: .gitmodules  CMakeLists.txt  Key.c  KeyCompare.c  Metadata.c  Metadata.h  README.md  Settings.json  Test.c  Test.h  Ximu3.h  Ximu3Ascii.c  Ximu3Ascii.h  Ximu3Binary.c  Ximu3Binary.h  Ximu3Command.c  Ximu3Command.h  Ximu3Data.h  Ximu3Definitions.h  Ximu3Settings.c  Ximu3Settings.h  Ximu3SettingsJson.c  Ximu3SettingsJson.h  Ximu3Size.h  generate.py  generate_settings.py  main.c
.github/workflows/: main.yml
JSON/: Json.c
